--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="white">#FFFFFF</color>
 
     <color name="viewBg">#f1f5f8</color>
-    <color name="movieTitle">#4c4c4c</color>
+    <color name="movie_title">#4c4c4c</color>
 
 </resources>
