--- a/app/src/main/res/layout/trailer_card.xml
+++ b/app/src/main/res/layout/trailer_card.xml
@@ -5,7 +5,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:adjustViewBounds="true"
     android:background="@color/viewBg2">
-    
+
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_height="100dp"
@@ -13,12 +13,12 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/card_margin"
         card_view:cardCornerRadius="0dp">
-        
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/viewBg2">
-            
+            android:background="@color/white">
+
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="100dp"
@@ -42,9 +42,9 @@
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/imageView"
                 android:layout_toEndOf="@+id/imageView"/>
-            
+
         </RelativeLayout>
-        
+
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
