--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -52,9 +52,10 @@
 
             <com.github.ivbaranov.mfb.MaterialFavoriteButton
                 android:id="@+id/favorite_button"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="5dp"
+                android:layout_height="52dp"
                 android:padding="@dimen/padding_layout"
+                app:mfb_type="heart"
                 android:layout_marginLeft="@dimen/layout_margin_left"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:background="@color/colorPrimary"/>
