--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -61,30 +61,59 @@
                 android:background="@color/colorPrimary"/>
 
             <TextView
+                android:id="@+id/audiencerating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_toRightOf="@+id/favorite_button"
+                android:text="Audience Score: " />
+
+            <TextView
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/userrating"
                 android:padding="@dimen/padding_layout"
-                android:layout_toRightOf="@+id/favorite_button"
-                android:layout_marginLeft="@dimen/layout_margin_left"
+                android:layout_toRightOf="@+id/audiencerating"
+                android:layout_marginLeft="5dp"
                 android:textSize="20sp"
                 />
+            <TextView
+                android:id="@+id/releaselabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:layout_below="@+id/favorite_button"
+                android:text="Release Date" />
 
             <TextView
                 android:layout_width="368dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/releasedate"
-                android:layout_below="@+id/userrating"
+                android:layout_below="@+id/releaselabel"
                 android:layout_marginLeft="@dimen/layout_margin_left"
                 android:padding="@dimen/padding_layout"
                 android:textSize="20sp"
                 />
 
             <TextView
+                android:id="@+id/plotlabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:layout_below="@+id/releasedate"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:text="Plot" />
+
+            <TextView
                 android:layout_width="368dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/plotsynopsis"
-                android:layout_below="@+id/releasedate"
+                android:layout_below="@+id/plotlabel"
                 android:padding="@dimen/padding_layout"
                 android:textSize="20sp"
                 />
@@ -97,20 +126,44 @@
 
             <TextView
                 android:id="@+id/trailer"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
-                android:text="@string/trailer"
-                />
+                android:layout_margin="16dp"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:layout_below="@+id/plotsynopsis"
+                android:text="@string/trailer" />
 
 
-            <android.support.v7.widget.RecyclerView
+            <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
                 android:id="@+id/recycler_view1"
-                android:layout_width="368dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:scrollbars="vertical"
-                android:layout_below="@+id/plotsynopsis"/>
+                android:layout_gravity="center_vertical"
+                android:layout_below="@+id/trailer"
+                app:msrv_gravity="start"
+                app:msrv_ms_per_inch="@dimen/normal_speed"
+                app:msrv_snap_count="1" />
+
+            <TextView
+                android:id="@+id/text_review"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:text="@string/review"
+                android:layout_below="@+id/recycler_view1"
+                android:textStyle="bold"
+                android:textSize="20sp" />
+
+            <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
+                android:id="@+id/review_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_below="@id/text_review"
+                app:msrv_gravity="center"
+                app:msrv_ms_per_inch="@dimen/low_speed"
+                app:msrv_snap_count="2" />
         </RelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
