--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="pref_sort_order">
+    <string-array name="pref_sortBy_entries">
+        <item>@string/pref_most_popular</item>
+        <item>@string/pref_highest_rated</item>
+        <item>@string/favorite</item>
+    </string-array>
+
+    <string-array name="pref_sortBy_values">
         <item>@string/pref_most_popular</item>
         <item>@string/pref_highest_rated</item>
         <item>@string/favorite</item>
